<resources>
    <string name="app_name">ND1</string>
    <string name="editBynText">Edit</string>
    <string name="doneBtnText">Done</string>
    <string name="completed">Completed</string>
    <string name="done">Done</string>
    <string name="timerDefaultText">00:00:00</string>
    <string name="completionsDefaultText">0</string>
    <string name="workout">Workout</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="zero">0</string>
    <string name="minutes">Minutes</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
</resources>